TEST_PROGRAMS/INVALID/05/multiline_interpreted_string_lit.go
/* Multi-line interpreted string literal */

package multiline_interpreted_string_lit

var s string = "A multi-line interpreted
string literal that is not allowed"

func main() {
	// Do nothing
}
